--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "undora",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "packageManager": "pnpm@10.12.4",
   "description": "A lightweight TypeScript library for seamless undo/redo functionality.",
   "author": "jinghaihan",
@@ -29,7 +29,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
+    "build": "tsdown --clean --dts",
     "typecheck": "tsc",
     "test": "vitest",
     "lint": "eslint",
@@ -53,8 +53,8 @@
     "pncat": "catalog:cli",
     "simple-git-hooks": "catalog:lint",
     "taze": "catalog:cli",
+    "tsdown": "^0.12.9",
     "typescript": "catalog:dev",
-    "unbuild": "catalog:build",
     "vitest": "catalog:test"
   },
   "simple-git-hooks": {
