feat: add coverage support with vitest and update package configurations

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build": "tsdown --clean --dts",
     "typecheck": "tsc",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "lint": "eslint",
     "commit": "czg",
     "deps": "taze major -I",
@@ -46,6 +47,7 @@
     "@antfu/eslint-config": "catalog:lint",
     "@octohash/tsconfig": "catalog:dev",
     "@types/node": "catalog:types",
+    "@vitest/coverage-v8": "catalog:test",
     "bumpp": "catalog:cli",
     "czg": "catalog:cli",
     "eslint": "catalog:lint",
@@ -53,7 +55,7 @@
     "pncat": "catalog:cli",
     "simple-git-hooks": "catalog:lint",
     "taze": "catalog:cli",
-    "tsdown": "^0.12.9",
+    "tsdown": "catalog:build",
     "typescript": "catalog:dev",
     "vitest": "catalog:test"
   },
