--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages: []
 catalogs:
   build:
-    unbuild: ^3.5.0
+    tsdown: ^0.12.9
   cli:
     bumpp: ^10.2.0
     czg: ^1.11.2
@@ -16,6 +16,7 @@ catalogs:
     lint-staged: ^16.1.2
     simple-git-hooks: ^2.13.0
   test:
+    '@vitest/coverage-v8': 3.2.4
     vitest: ^3.2.4
   types:
     '@types/node': ^24.0.10
