chore: update deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "undora",
   "type": "module",
   "version": "0.1.2",
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "description": "A lightweight TypeScript library for seamless undo/redo functionality.",
   "author": "jinghaihan",
   "license": "MIT",
@@ -30,11 +30,10 @@
   ],
   "scripts": {
     "build": "tsdown --clean --dts",
-    "typecheck": "tsc",
+    "typecheck": "tsc --noEmit",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "lint": "eslint",
-    "commit": "czg",
     "deps": "taze major -I",
     "release": "bumpp && pnpm publish --no-git-checks",
     "catalog": "pncat",
@@ -45,11 +44,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:lint",
-    "@octohash/tsconfig": "catalog:dev",
     "@types/node": "catalog:types",
     "@vitest/coverage-v8": "catalog:test",
     "bumpp": "catalog:cli",
-    "czg": "catalog:cli",
     "eslint": "catalog:lint",
     "lint-staged": "catalog:lint",
     "pncat": "catalog:cli",
