--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,18 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@octohash/tsconfig/node.json"
+  "compilerOptions": {
+    "target": "es2018",
+    "lib": ["esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
